2009-07-19  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-menu.el (cal-menu-set-date-title): Handle calls from
	non-calendar buffers (Bug#3862).  Restore "not on a date" message.
	(cal-menu-context-mouse-menu): Doc fix.

	* desktop.el (desktop-buffers-not-to-save): Set :version tag.

	* simple.el (mail-user-agent): Doc fix.  Set :version tag.

2009-07-18  Juri Linkov  <juri@jurta.org>

	* info.el: Virtual Info keyword finder.
	(add-to-list)<Info-virtual-files>: Add "\\`\\*Finder.*\\*\\'".
	(Info-finder-file): New variable.
	(Info-finder-find-file): New function.
	(finder-known-keywords, finder-package-info)
	(find-library-name, lm-commentary): Use defvar and
	declare-function to silence compiler warnings.
	(Info-finder-find-node): New function.
	(info-finder): New command.

	* subr.el (process-kill-buffer-query-function): New function.
	(add-hook)<kill-buffer-query-functions>: Add hook
	`process-kill-buffer-query-function'.

2009-07-18  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-before-hack-hook),
	(c-postprocess-file-styles): Give invocation of `c-set-style'
	DONT-OVERRIDE parameter of t.  Already set style variables will
	thus not be overridden by style settings given by `c-file-syle'.

	* files.el (hack-local-variables-filter): Remove entries with
	duplicate keys from `file-local-variables-alist'.

2009-07-18  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (deactivate-mark, activate-mark, set-mark): Don't call
	x-set-selection if display-selections-p returns nil for the
	current frame.

2009-07-18  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (region-active-p, use-region-p): Doc fix (Bug#3873).

2009-07-18  Eli Zaretskii  <eliz@gnu.org>

	* desktop.el (desktop-buffers-not-to-save): Default value is nil.
	Accept nil in addition to a regexp.
	(desktop-files-not-to-save): Add "(ftp)$" to the default regexp.
	Accept nil in addition to a regexp.
	(desktop-save-buffer-p): Don't use desktop-buffers-not-to-save for